src/objects/pos_trans_hdr__x.object
<CustomObject>
    <description>caesars$pos_trans_hdr</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$pos_trans_hdr</externalName>
    <fields>
        <fullName>c_file_prop_cd__c</fullName>
        <description>c_file_prop_cd</description>
        <externalDeveloperName>c_file_prop_cd</externalDeveloperName>
        <label>c_file_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_employee_name__c</fullName>
        <description>c_pos_employee_name</description>
        <externalDeveloperName>c_pos_employee_name</externalDeveloperName>
        <label>c_pos_employee_name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <description>c_pos_rev_center_cd</description>
        <externalDeveloperName>c_pos_rev_center_cd</externalDeveloperName>
        <label>c_pos_rev_center_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_trans_id__c</fullName>
        <description>c_pos_trans_id</description>
        <externalDeveloperName>c_pos_trans_id</externalDeveloperName>
        <label>c_pos_trans_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_trans_type_cd__c</fullName>
        <description>c_trans_type_cd</description>
        <externalDeveloperName>c_trans_type_cd</externalDeveloperName>
        <label>c_trans_type_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_dt__c</fullName>
        <description>d_pos_trans_dt</description>
        <externalDeveloperName>d_pos_trans_dt</externalDeveloperName>
        <label>d_pos_trans_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_end_time__c</fullName>
        <description>d_pos_trans_end_time</description>
        <externalDeveloperName>d_pos_trans_end_time</externalDeveloperName>
        <label>d_pos_trans_end_time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_pos_trans_start_time__c</fullName>
        <description>d_pos_trans_start_time</description>
        <externalDeveloperName>d_pos_trans_start_time</externalDeveloperName>
        <label>d_pos_trans_start_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_beer_amt__c</fullName>
        <description>f_beer_amt</description>
        <externalDeveloperName>f_beer_amt</externalDeveloperName>
        <label>f_beer_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_chrg_amt__c</fullName>
        <description>f_cash_chrg_amt</description>
        <externalDeveloperName>f_cash_chrg_amt</externalDeveloperName>
        <label>f_cash_chrg_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_discount_amt__c</fullName>
        <description>f_discount_amt</description>
        <externalDeveloperName>f_discount_amt</externalDeveloperName>
        <label>f_discount_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_amt__c</fullName>
        <description>f_food_amt</description>
        <externalDeveloperName>f_food_amt</externalDeveloperName>
        <label>f_food_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_liq_amt__c</fullName>
        <description>f_liq_amt</description>
        <externalDeveloperName>f_liq_amt</externalDeveloperName>
        <label>f_liq_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_misc_amt__c</fullName>
        <description>f_misc_amt</description>
        <externalDeveloperName>f_misc_amt</externalDeveloperName>
        <label>f_misc_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_na_bev_amt__c</fullName>
        <description>f_na_bev_amt</description>
        <externalDeveloperName>f_na_bev_amt</externalDeveloperName>
        <label>f_na_bev_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_oth_amt__c</fullName>
        <description>f_oth_amt</description>
        <externalDeveloperName>f_oth_amt</externalDeveloperName>
        <label>f_oth_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_payment_amt__c</fullName>
        <description>f_other_payment_amt</description>
        <externalDeveloperName>f_other_payment_amt</externalDeveloperName>
        <label>f_other_payment_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pos_comp_amt__c</fullName>
        <description>f_pos_comp_amt</description>
        <externalDeveloperName>f_pos_comp_amt</externalDeveloperName>
        <label>f_pos_comp_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_amt__c</fullName>
        <description>f_retail_amt</description>
        <externalDeveloperName>f_retail_amt</externalDeveloperName>
        <label>f_retail_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_chrg_amt__c</fullName>
        <description>f_room_chrg_amt</description>
        <externalDeveloperName>f_room_chrg_amt</externalDeveloperName>
        <label>f_room_chrg_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_service_charge_amt__c</fullName>
        <description>f_service_charge_amt</description>
        <externalDeveloperName>f_service_charge_amt</externalDeveloperName>
        <label>f_service_charge_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_sub_total_amt__c</fullName>
        <description>f_sub_total_amt</description>
        <externalDeveloperName>f_sub_total_amt</externalDeveloperName>
        <label>f_sub_total_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tax_amt__c</fullName>
        <description>f_tax_amt</description>
        <externalDeveloperName>f_tax_amt</externalDeveloperName>
        <label>f_tax_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tax_discount_oth_amt__c</fullName>
        <description>f_tax_discount_oth_amt</description>
        <externalDeveloperName>f_tax_discount_oth_amt</externalDeveloperName>
        <label>f_tax_discount_oth_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_item_amt__c</fullName>
        <description>f_total_item_amt</description>
        <externalDeveloperName>f_total_item_amt</externalDeveloperName>
        <label>f_total_item_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_payment_amt__c</fullName>
        <description>f_total_payment_amt</description>
        <externalDeveloperName>f_total_payment_amt</externalDeveloperName>
        <label>f_total_payment_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trans_amt__c</fullName>
        <description>f_trans_amt</description>
        <externalDeveloperName>f_trans_amt</externalDeveloperName>
        <label>f_trans_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_wine_amt__c</fullName>
        <description>f_wine_amt</description>
        <externalDeveloperName>f_wine_amt</externalDeveloperName>
        <label>f_wine_amt</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_check_nbr__c</fullName>
        <description>i_check_nbr</description>
        <externalDeveloperName>i_check_nbr</externalDeveloperName>
        <label>i_check_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_covers__c</fullName>
        <description>i_covers</description>
        <externalDeveloperName>i_covers</externalDeveloperName>
        <label>i_covers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_line_item_qty__c</fullName>
        <description>i_line_item_qty</description>
        <externalDeveloperName>i_line_item_qty</externalDeveloperName>
        <label>i_line_item_qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_line_item__c</fullName>
        <description>i_nbr_line_item</description>
        <externalDeveloperName>i_nbr_line_item</externalDeveloperName>
        <label>i_nbr_line_item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_open_from_check_nbr__c</fullName>
        <description>i_open_from_check_nbr</description>
        <externalDeveloperName>i_open_from_check_nbr</externalDeveloperName>
        <label>i_open_from_check_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_order_nbr__c</fullName>
        <description>i_order_nbr</description>
        <externalDeveloperName>i_order_nbr</externalDeveloperName>
        <label>i_order_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pos_employee_nbr__c</fullName>
        <description>i_pos_employee_nbr</description>
        <externalDeveloperName>i_pos_employee_nbr</externalDeveloperName>
        <label>i_pos_employee_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_table_nbr__c</fullName>
        <description>i_table_nbr</description>
        <externalDeveloperName>i_table_nbr</externalDeveloperName>
        <label>i_table_nbr</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_xref_dmid__c</fullName>
        <description>i_xref_dmid</description>
        <externalDeveloperName>i_xref_dmid</externalDeveloperName>
        <label>i_xref_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$pos_trans_hdr</label>
    <pluralLabel>caesars$pos_trans_hdr</pluralLabel>
</CustomObject>